--- a/src/Components/CustomerList/_customer-list.scss
+++ b/src/Components/CustomerList/_customer-list.scss
@@ -1,12 +1,24 @@
 .customer-list-container{
+    margin-top: 0;
+    margin-bottom:0;
     height:100%;
+    overflow-y:scroll;  
+  
+  
     div{
+        margin-top:0;
+        padding:0;
         height:25%;
         border-bottom: 1px solid black;
+
+        h3{
+            color:black;
+            font-weight:700;
+            margin:0;
+        }
     }
     .selected-customer{
         background-color:lightgrey;
-        
     }
 }
 
