--- a/src/Components/CustomerCard/_customer-card.scss
+++ b/src/Components/CustomerCard/_customer-card.scss
@@ -4,41 +4,11 @@
     height: 100vh;
 
     .customer-card-details {
-        background-color: lightblue;
+        background-color: lightgrey;
         height: 20%;
     }
 
-    .image-container {
-        background-color: lightgray;
-        height: 80%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-
-        .image-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-gap: 10px;
-
-            .image-cell {
-                background-color: #ddd;
-                padding: 20px;
-                text-align: center;
-                border: 1px solid black;
-
-                .image-cell-avatar {
-                    width: 150px;
-                    height: 150px;
-                    border-radius: 50%;
-                    margin-bottom: 10px;
-                    display: block;
-                    margin: 0 auto;
-                }
-
-
-            }
-        }
-    }
+   
 
 }
+
